# jamiebrynes.com

./: .gitignore  .stylelintrc  .travis.yml  Cargo.toml  Makefile  README.md  arbgen.toml  config.toml  config.yaml  flake.nix  inspirations  justfile  main.css  next.config.js  package-lock.json  package.json  runner.sh  scripts.nix  siteconfig.json  tailwind.config.js  tsconfig.json
.circleci/: config.yml
.github/workflows/: cicd.yml  kudos-integration.yml  post-checks.yml  premerge.yml  publish-kudos.yml  update-github-stars.yml
_kudos/: Cargo.toml
_kudos/src/: main.rs
assets/css/: code.css  nord-chroma.css
assets/js/: main.ts
ci/: deploy.sh  dictionary  minify-js.sh  spellcheck.Dockerfile  write-good.Dockerfile  zola.Dockerfile
content/: _index.md  resume.mdx
content/blog/: 2018-12-28-an-intro.md  2019-01-01-projects-dec-18.md  _index.md  (+10 more)
data/: github.json  work.yaml
js/: goatcounter.js  kudosplease-bootstrap.js  kudosplease.js  lightbox.js  nav.js
kudos/: Cargo.toml
layouts/: 404.html  index.html
sass/: _about.scss  _helpers.scss  _kudos.scss  _modal.scss  _post.scss  _variables.scss  site.scss
src/: data.tsx  getPostPreviews.tsx  metadata.tsx  socials.json  syntax-highlighting.css
static/: main.css
templates/: 404.html  base.html  content.html  index.html  list_base.html  macros.html  page.html  page_base.html  posts.html  resume.html
tools/: fetch-github-stars.sh
tools/arbgen/: Cargo.toml  README.md
tools/arbgen/src/: config.rs  highlight.rs  main.rs  output.rs  scanner.rs  snippet.rs  target.rs  theme.rs  watcher.rs
(+96 files in other folders)
