[package]
name = "kudos"
version = "0.1.0"
authors = ["Jamie Brynes <jamiebrynes7@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core  = { version = "0.39.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.39.0", default_features = false, features = ["rustls"] }
serde = { version = "1.0.80", features = ["derive"] }
lambda_runtime = "0.2.0"
serde_json = "1.0.40"


[[bin]]
name = "bootstrap"
path = "src/main.rs"