[package]
name = "arbgen"
version = "0.1.0"
edition = "2024"

[dependencies]
arborium = { version = "2.12.4", features = ["all-languages"] }
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
notify = { version = "8", features = ["macos_fsevent"] }
anyhow = "1"
owo-colors = "4"
toml = "0.8"
